# qwen-vox-rs

./: .gitattributes  .gitignore  ANCHORED_SUMMARY.md  Cargo.toml  OFFICIAL_QWEN3_TTS_REFERENCE_FLOW.md  QWEN3_TTS_FIX_TODO.md  QWEN3_TTS_GENERATION_FLOW.md  README.md  WORK_DONE.md  inspect_weights.py  plan.md  spec.md
crates/qwen-vox-cli/: Cargo.toml
crates/qwen-vox-cli/src/: main.rs
crates/qwen-vox-core/: Cargo.toml
crates/qwen-vox-core/src/: alignment.rs  audio_features.rs  causal_conv.rs  codebook.rs  config.rs  conv_decoder.rs  custom_ops.rs  decoder.rs  device.rs  error.rs  flow_matching.rs  lib.rs  mtp.rs  pipeline.rs  quantizer.rs  sampling.rs  speaker_encoder.rs  speech_synth.rs  speech_tokenizer_encoder.rs  stream.rs  talker.rs  tokenizer.rs  transformer.rs  vocoder.rs  weights.rs
crates/qwen-vox-core/tests/: alignment_verification.rs  audio_output_verification.rs  code_predictor_verification.rs  talker_verification.rs  weight_loading.rs
docs/: agent_voice_failure_playbook.md  codec_decode_voice_fix_2026-06-02.md  operator-compatibility.md  qwen3_tts_minnan_hokkien_guide.md  talker_native_todo.md
scripts/: build_release.ps1  build_tokenizer_json.py  check_safetensors_keys.py  check_safetensors_keys2.py  check_test_input.py  check_tokenizer.py
tools/: compare_codec_frames.py  convert_weights.py  export_activations.py  export_intermediate_activations.py  export_weights_for_alignment.py  generate_official_reference.py
