[workspace]
resolver = "2"
members = [
    "crates/qwen-vox-core",
    "crates/qwen-vox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Tensor backend
candle-core = "0.9"
candle-nn = "0.9"

# Concurrency
rayon = "1.10"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio
hound = "3.5"

# Numeric
half = "2"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
qwen-vox-core = { path = "crates/qwen-vox-core" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
